--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
   "author": "Dan Bowles",
   "dependencies": {
     "express": "~4.0.0",
+    "static-favicon": "~1.0.0",
     "morgan": "~1.0.0",
+    "cookie-parser": "~1.0.0",
     "body-parser": "~1.0.0",
+    "debug": "*",
+    "jade": "*",
     "method-override": "~1.0.0"
   }
 }
