Switched to MongooseJS

--- a/package.json
+++ b/package.json
@@ -15,9 +15,6 @@
     "jade": "*",
     "method-override": "~1.0.0",
     "mongodb": "*",
-    "mongoskin": "*"
-  },
-  "devDependencies": {
-    "gulp": "^3.8.8"
+    "mongoose": "^3.8.16"
   }
 }
