--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "jade": "*",
     "method-override": "~1.0.0",
     "mongodb": "*",
-    "mongoose": "^3.8.16"
+    "mongoose": "^3.8.16",
+    "bcrypt-nodejs": "0.0.3",
+    "passport": "^0.2.1",
+    "passport-http": "^0.2.2"
   }
 }
