--- a/package.json
+++ b/package.json
@@ -3,7 +3,14 @@
   "version": "0.0.0",
   "description": "Simple todo list app used as a project to learn",
   "main": "server.js",
-  "repository": "",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/danbowles/responsive-todo.git"
+  },
+  "scripts": {
+    "start": "node server.js",
+    "test": "make test"
+  },
   "author": "Dan Bowles",
   "dependencies": {
     "express": "~4.0.0",
@@ -21,5 +28,10 @@
     "connect-flash": "^0.1.1",
     "bcrypt-nodejs": "0.0.3",
     "serve-favicon": "^2.1.5"
+  },
+  "devDependencies": {
+    "chai": "^1.9.2",
+    "mocha": "^1.21.5",
+    "should": "^4.0.4"
   }
 }
